# fparser

./: Makefile.am  README.md  configure.ac  meson.build
src/: Makefile.am  fparser.f90  meson.build
test/: Makefile.am  meson.build
