# inc = include_directories('../src')

executable('testfp','testfp.f90',dependencies: [fparser_dep],install: true)
executable('testfp1','testfp1.f90',dependencies: [fparser_dep],install: true)
executable('testfp2','testfp2.f90',dependencies: [fparser_dep],install: true)
executable('testfp3','testfp3.f90',dependencies: [fparser_dep],install: true)
executable('testfp4','testfp4.f90',dependencies: [fparser_dep],install: true)
